# transit

./: .env.1password  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .mcp.json  AGENTS.md  CLAUDE.md  CLOUDFLARE_PAID_TIER_GUIDE.md  CONTRIBUTING.md  Caddyfile  DEPLOYMENT_STATUS.md  Dockerfile  Dockerfile.postgis  README.md  SECURITY.md  SUPPORT.md  TESTING_SETUP_COMPLETE.md  alembic.ini  apply-migrations.ps1  apply-migrations.sh  docker-compose.yml  gtfs-to-silver.py  jest.config.js  package-lock.json  package.json  pyproject.toml  turbo.json
apps/db/: .dockerignore  README.md  docker-compose.yml  package.json  pyproject.toml
apps/db/config/providers/: README.md  octranspo.yaml  stm.yaml  sto.yaml
apps/db/infra/postgres-serving-access/: README.md  harden-sql-readers.sql
apps/db/scripts/: backup-postgres.sh  restore-backup-proof.sh  run-pg-repack.sh
apps/db/src/transit_ops/: backups.py  cli.py  orchestration.py  settings.py  sql_registry.py
apps/db/src/transit_ops/core/: errors.py  models.py
apps/db/src/transit_ops/db/: connection.py  migration_guard.py
apps/db/src/transit_ops/db/migrations/: env.py
apps/db/src/transit_ops/gold/: __init__.py  alert_archive.py  dim_history.py  marts.py  rollups.py
apps/db/src/transit_ops/gold/reader/: __init__.py  buckets.py  histogram.py  percentile.py  projector.py  rates.py  (+2 more)
apps/db/src/transit_ops/health/: __init__.py  app.py  checks.py  models.py
apps/db/src/transit_ops/ingestion/: __init__.py  _versioned_capture.py  common.py  gis.py  i3.py  realtime_gtfs.py  service_alerts.py  storage.py
apps/db/src/transit_ops/maintenance/: __init__.py  _helpers.py  gold.py  i3.py  silver.py  static.py  vacuum.py
apps/db/src/transit_ops/silver/: __init__.py  _batch.py  gis.py  i3.py  realtime_gtfs.py  static_gtfs.py
apps/db/src/transit_ops/snapshots/: contract.py  gate.py  historic_gc.py  paths.py  protocols.py  publish.py  serialization.py  storage.py
apps/db/src/transit_ops/source_factory/: catalog.py  models.py  runner.py  validation.py
apps/db/src/transit_ops/validation/: __init__.py  historic_publish.py  proof.py
apps/db/tests/: _c3_parity_dump.py  _sqlfakes.py  conftest.py  test_alert_archive.py  test_alert_archive_migration_real_db.py  test_alert_archive_publication.py  test_alert_archive_publication_real_db.py  test_alert_archive_real_db.py  test_alert_count_real_db_regression.py  test_alert_history_window_realdb.py  test_alerting_scripts.py  test_as_of_rankings_builders.py  test_as_of_rankings_contract.py  test_as_of_rankings_publish.py  test_as_of_rankings_real_db.py  test_bronze_prune_real_db.py  test_bronze_storage.py  test_cli.py  test_daily_warm_rollups_workflow.py  test_data_health_realdb.py  test_data_proxy_artifacts.py  test_deploy_artifacts.py  test_dim_history_backfill.py  test_dim_history_real_db_regression.py  test_failure_rows_real_db.py  test_gis_silver.py  test_gold_dst_real_db_regression.py  test_gold_fact_prune_real_db.py  test_gold_marts.py  test_gold_reader.py  test_habit_score_reconciliation_realdb.py  test_health_app.py  test_health_checks.py  test_health_models.py  test_historic_publish_proof.py  test_historic_publish_recovery_workflow.py  test_historic_snapshot_gc.py  test_historic_snapshot_gc_cli.py  test_historic_snapshot_gc_workflow.py  test_history_family_gate_engine.py  (+103 more)
apps/db/tests/fixtures/spine_golden/: route_reliability_CUT-1.fact.json
(+2023 files in other folders)
