[build-system]
requires = ["setuptools>=83.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transit-ops"
version = "0.1.0"
description = "STM-first, provider-ready GTFS and GTFS-RT analytics foundation."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.18.5,<2.0",
  "boto3>=1.43.50,<2.0",
  "gtfs-realtime-bindings>=2.1.0,<3.0",
  "pydantic>=2.13.4,<3.0",
  "pydantic-settings>=2.14.2,<3.0",
  "psycopg[binary]>=3.3.4,<4.0",
  "pyyaml>=6.0,<7.0",
  "python-dotenv>=1.0,<2.0",
  "sqlalchemy>=2.0.51,<3.0",
  "typer>=0.27.0,<1.0",
  "pyshp>=3.1.4,<4.0",
  "httpx>=0.28.1",
  "fastapi>=0.139.2",
]

[project.scripts]
transit-ops = "transit_ops.cli:app"

[dependency-groups]
dev = [
  "mypy>=1.20.2,<2.0",
  "pytest>=9.1.1,<10.0",
  "ruff>=0.15.22,<0.16",
]
health = [
    "uvicorn[standard]>=0.51.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
files = ["src/transit_ops/snapshots/publish.py"]
follow_imports = "silent"
strict = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
show_error_codes = true
